--- a/README
+++ b/README
@@ -1,1 +1,6 @@
-git repo
+contents:
+
+intermediate algorithm scripting folder
+advanced algorithm scripting folder
+intermediate front-end projects
+advanced front-end projects
