--- a/README
+++ b/README
@@ -1,14 +1,16 @@
 contents:
 
 -
-advanced algorithm scripting 
+
+<advanced algorithm scripting> 
 exact-change.js
 inventory-update.js
 symmetric-difference.js
 validate-us-telephone-numbers.js
 
 -
-intermediate algorithm scripting
+
+<intermediate algorithm scripting>
 arguments-optional.js
 binary-agents.js
 boo-who.js
@@ -32,5 +34,6 @@ sum-all-primes.js
 wherefore-art-thou.js
 
 -
-projects
+
+<projects>
 show the local weather.html
