--- a/README
+++ b/README
@@ -64,5 +64,7 @@ validate-us-telephone-numbers.js
 <projects>
 
 show the local weather.html
+build-a-wikipedia-viewer.html
 build-a-random-quote-machine.html
+
 -
