--- a/README
+++ b/README
@@ -66,5 +66,5 @@ validate-us-telephone-numbers.js
 show the local weather.html
 build-a-wikipedia-viewer.html
 build-a-random-quote-machine.html
-
+use-the-twitchtv-json-api.html
 -
