--- a/README
+++ b/README
@@ -63,7 +63,7 @@ validate-us-telephone-numbers.js
 
 <projects>
 
-show the local weather.html
+show-the-local-weather.html
 build-a-wikipedia-viewer.html
 build-a-random-quote-machine.html
 use-the-twitchtv-json-api.html
