--- a/README
+++ b/README
@@ -65,5 +65,7 @@ build-a-javascript-calculator.html
 build-a-wikipedia-viewer.html
 build-a-random-quote-machine.html
 use-the-twitchtv-json-api.html
-
+pomodoro-clock-vanilla-js.html
+pomodoro-clock folder [angular]
+rada-countdown folder [angular]
 -
